trying to fix spacing

--- a/app/assets/stylesheets/components/_project.scss
+++ b/app/assets/stylesheets/components/_project.scss
@@ -1,8 +1,22 @@
 .project {
-  height: 175px;
+  display: flex;
+  align-items: center;
+  width: 1100px;
+}
+
+.project-picture {
+  height: 300px;
+  width: 300px;
+  border-radius: 4px;
   text-shadow: 0 1px 3px rgba(0,0,0,0.6);
   background-size: cover !important;
   background-position: center;
   color: white;
   position: relative;
+  padding: 30px;
+  margin: 0px 30px 30px 30px;
+}
+
+.product-description {
+  flex: 1 0 auto;
 }
