--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -26,3 +26,7 @@ body {
   background-color: rgba(182, 235, 232, 0.5);
   color: rgba(0, 0, 0, 0.8)
 }
+
+.projects h1 {
+  // text-decoration: underline;
+}
